@@ -19,10 +19,10 @@ char *get_xdir_fs (void);
 char *get_xdir_utf8 (void);
 void load_config (void);
 int save_config (void);
-void list_free (GSList ** list);
-void list_loadconf (char *file, GSList ** list, char *defaultconf);
-int list_delentry (GSList ** list, char *name);
-void list_addentry (GSList ** list, char *cmd, char *name);
+void list_free (GList ** list);
+void list_loadconf (char *file, GList ** list, char *defaultconf);
+int list_delentry (GList ** list, char *name);
+void list_addentry (GList ** list, char *cmd, char *name);
 int cmd_set (session *sess, char *tbuf, char *word[], char *word_eol[]);
 int xchat_open_file (char *file, int flags, int mode, int xof_flags);
 FILE *xchat_fopen_file (const char *file, const char *mode, int xof_flags);
